<resources>
    <string name="app_name">AppSOS</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="addNumber">Thêm SĐT</string>
    <string name="callPhone">Gọi Báo</string>
    <string name="aid">Sơ Cứu</string>
    <string name="skill">Kĩ Năng</string>
    <string name="tutorial">Hướng Dẫn</string>
    <string name="location">Google Map</string>

    <string name="help">Cứu</string>
    <string name="noConnectInternet">Không có kết nối Internet</string>
    <string name="listMessage">Danh Sách Nhận Tin Báo</string>
    <string name="Contact">Danh Bạ</string>
    <string name="callEmergency">Cuộc Gọi Khẩn Cấp</string>
    <string name="added">Số Này Đã Được Thêm</string>
    <string name="SOS">SOS</string>
    <string name="gotIt">Xong</string>

    <string name="tutorialAddNumber">Dùng để thêm số điện thoại nhận tin báo</string>
    <string name="tutorialSOS">Khi khẩn cấp, hãy click vào nút trên để gửi thông báo KHẨN CẤP đến các số điện thoại đã được thêm vào ở "Thêm SĐT"
        - Trong đó nội dung được gửi đi gồm: lời kêu gọi giúp đỡ và địa điểm gặp nạn</string>
    <string name="tutorialAid">Tập hợp kỹ năng sơ cứu khẩn cấp trong những trường hợp như TNGT, đuối nước, điện giật…</string>
    <string name="tutorialSkill">Học tập, tìm hiểu các kiến thức liên quan đến các trường hợp khẩn cấp để chuẩn bị cho những trường hợp xấu có thể xảy ra</string>
    <string name="tutorialGoogleMap">Định vị vị trí của thiết bị trên bản đồ</string>
    <string name="tutorialCall">Gọi đường dây nóng để báo cáo lại các trường hợp khẩn cấp</string>

    <string name="home">HOME</string>
    <string name="menu">MENU</string>
    <string name="menuNumberPhone">Danh Sách SĐT</string>
    <string name="cancelSend">Tin Khẩn Cấp Sẽ Được Gửi Đi Sau: </string>
</resources>