<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.SecondFragment"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#f00"
    android:id="@+id/fragment2">

    <ImageView
        android:importantForAccessibility="no"
        android:id="@+id/img_swipe_down"
        android:layout_width="60dp"
        android:layout_height="75dp"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="25dp"
        android:paddingTop="15dp"
        android:paddingRight="25dp"
        android:paddingBottom="15dp"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/btnAddNumberPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/bgr"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp"
            android:weightSum="10">

            <ImageView
                android:importantForAccessibility="no"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                android:src="@drawable/themsdt" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6.5"
                android:gravity="center"
                android:text="@string/addNumber"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnLocation"
            android:layout_weight="1"
            android:weightSum="10"
            android:padding="5dp"
            android:background="@drawable/bgr"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:importantForAccessibility="no"
                android:layout_weight="3.5"
                android:src="@drawable/ic_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <TextView
                android:layout_weight="6.5"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/location"
                android:textSize="20sp"
                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_weight="1"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/btnAid"
            android:layout_weight="1"
            android:weightSum="10"
            android:padding="5dp"
            android:background="@drawable/bgr"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:importantForAccessibility="no"
                android:layout_weight="3.5"
                android:src="@drawable/socuu"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <TextView
                android:layout_weight="6.5"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/aid"
                android:textSize="20sp"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btnCallPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/bgr"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp"
            android:weightSum="10">

            <ImageView
                android:importantForAccessibility="no"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                android:src="@drawable/goibao" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6.5"
                android:gravity="center"
                android:text="@string/callPhone"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_weight="1"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/btnSkill"
            android:layout_weight="1"
            android:weightSum="10"
            android:padding="5dp"
            android:background="@drawable/bgr"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:importantForAccessibility="no"
                android:layout_weight="3.5"
                android:src="@drawable/kinang"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <TextView
                android:layout_weight="6.5"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/skill"
                android:textSize="20sp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnTutorial"
            android:layout_weight="1"
            android:weightSum="10"
            android:padding="5dp"
            android:background="@drawable/bgr"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:importantForAccessibility="no"
                android:layout_weight="3.5"
                android:src="@drawable/huongdan"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <TextView
                android:layout_weight="6.5"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tutorial"
                android:textSize="20sp"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>